<resources>
    <string name="app_name">My Data</string>
    <string name="my_notes">My Notes</string>
    <string name="user_name">user name</string>
    <string name="user_email">user email</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="add_note">Add Note</string>
    <string name="notes">Notes</string>
    <string name="general">General</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>

    <string name="my_note">My note</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">note subtitle</string>
    <string name="type_note_here">type note here</string>
    <string name="search_notes">search notes</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="pick_color">Pick color</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel_dailog">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_message">Are you sure you want to delete this Note?</string>
    <string name="by_hanamanth_avaradi">By Hanamanth Avaradi</string>
    <string name="back">Back</string>


    <string name="duty_sheets">Duty Sheets</string>

</resources>