<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notePackage.activities.CreateNotesActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <EditText
                android:id="@+id/inputnoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colortexthint"
                app:layout_constraintTop_toBottomOf="@+id/layoutBack" />

            <EditText
                android:id="@+id/inputnotesubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textImeMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colornotesubtitleText"
                android:textColorHint="@color/colortexthint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewsubtitleindicator"
                app:layout_constraintTop_toBottomOf="@id/textdatetime" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageNote"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputnotesubtitle"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/imageRemoveImage"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:tint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"
                />

            <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutWebUrl"
    android:layout_marginStart="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_12sdp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@id/imageNote"
    android:visibility="gone"
    tools:ignore="UseCompoundDrawables">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textWebUrl"
        android:layout_weight="1"
        android:autoLink="web"
        android:fontFamily="@font/ubuntu"
        android:includeFontPadding="false"
        android:textSize="@dimen/_13ssp"
         />
    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:id="@+id/imageRemovalwebUrl"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="@color/colordelete"
        />

</LinearLayout>

            <EditText
                android:id="@+id/inputnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textImeMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colortexthint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

            <ImageView
                android:id="@+id/imagesave"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/layoutBack"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/layoutBack"
                app:tint="@color/colorIcons" />
            <LinearLayout
                android:id="@+id/layoutBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/colorBlack"
                >

                <TextView
                    android:id="@+id/imageback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:textAlignment="gravity"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/back"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14ssp"
                    app:drawableStartCompat="@drawable/ic_back" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
               android:maxWidth="2dp"
                android:background="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/layoutBack"
                app:layout_constraintBottom_toTopOf="@id/inputnoteTitle"
                />

            <TextView
                android:id="@+id/textdatetime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/inputnoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputnoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputnoteTitle" />

            <View
                android:id="@+id/viewsubtitleindicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indication"
                app:layout_constraintBottom_toBottomOf="@id/inputnotesubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputnotesubtitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        layout="@layout/layout_miscellaneous"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>